[package]
name = "fugue-idapro"
version = "0.2.1"
authors = ["Sam Thomas <st@xv.ax>, Zitai Chen <zitaichen@outlook.com>"]
edition = "2021"
license = "MIT"
description = "A binary analysis framework written in Rust"
homepage = "https://fugue.re"

[lib]
path = "rust/lib.rs"

[dependencies]
fugue-db = { version = "0.2"}
tempfile = "3"
thiserror = "1"
which = "4"
url = "2.2"
